--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,8 @@
+* {
+  margin: 0px;
+  padding: 0px;
+}
+
 body {
   width: 100vw;
   height: 100vh;
@@ -69,16 +74,21 @@ body .container section p {
 }
 body .container section .titleHeading {
   position: absolute;
-  top: 0;
-  left: 5%;
+  top: 5%;
+  left: 2%;
+}
+
+#cirleContainer {
+  width: 100vw;
+  height: 100vh;
 }
 
 .circles {
   position: absolute;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
   overflow: hidden;
   z-index: -1;
 }
@@ -189,7 +199,10 @@ body .container section .titleHeading {
   0% {
     transform: translateY(0) rotate(0deg);
     opacity: 1;
-    border-radius: 0;
+    border-radius: 10%;
+  }
+  20% {
+    opacity: 1;
   }
   100% {
     transform: translateY(-100vh) rotate(500deg);
@@ -202,7 +215,10 @@ body .container section .titleHeading {
   0% {
     transform: translateY(0) rotate(0deg);
     opacity: 1;
-    border-radius: 0;
+    border-radius: 10%;
+  }
+  20% {
+    opacity: 1;
   }
   100% {
     transform: translateY(-100vh) rotate(500deg);
