--- a/css/main.scss
+++ b/css/main.scss
@@ -1,3 +1,8 @@
+*{
+    margin: 0px;
+    padding: 0px;
+}
+
 body {
     width: 100vw;
     height: 100vh;
@@ -85,8 +90,8 @@ body {
 
             .titleHeading {
                 position:absolute;
-                top:0;
-                left: 5%;
+                top:5%;
+                left: 2%;
             }
             
         }
@@ -95,12 +100,18 @@ body {
 
 
 // Circles Animation
+
+#cirleContainer {
+    width: 100vw;
+    height: 100vh;
+}
+
 .circles{
     position: absolute;
     top: 0;
     left: 0;
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
     overflow: hidden;
     z-index: -1;
 }
@@ -115,7 +126,6 @@ body {
     background: rgb(53, 134, 255);
     animation: animate 25s linear infinite;
     bottom: -150px;
-    
 }
 
 .circles li:nth-child(1){
@@ -201,7 +211,11 @@ body {
     0%{
         transform: translateY(0) rotate(0deg);
         opacity: 1;
-        border-radius: 0;
+        border-radius: 10%;
+    }
+
+    20% {
+        opacity: 1;
     }
 
     100%{
