--- a/css/main.scss
+++ b/css/main.scss
@@ -26,9 +26,15 @@ body {
 
             // Intro Section
             #intro {
-                position:absolute;
-                top:10%;
+                position:relative;
+                top:20%;
                 left: 5%;
+            
+                -webkit-animation: fadein 2s; /* Safari, Chrome and Opera > 12.1 */
+                   -moz-animation: fadein 2s; /* Firefox < 16 */
+                    -ms-animation: fadein 2s; /* Internet Explorer */
+                     -o-animation: fadein 2s; /* Opera < 12.1 */
+                        animation: fadein 2s;
             }
 
             &:nth-of-type(1) {
@@ -122,7 +128,6 @@ body {
     list-style: none;
     width: 20px;
     height: 20px;
-    // background: rgba(53, 134, 255, 0.637);
     background: rgb(53, 134, 255);
     animation: animate 25s linear infinite;
     bottom: -150px;
@@ -224,4 +229,36 @@ body {
         border-radius: 50%;
     }
 
+}
+
+
+// Fadein Anim on Load
+
+@keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Firefox < 16 */
+@-moz-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Safari, Chrome and Opera > 12.1 */
+@-webkit-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Internet Explorer */
+@-ms-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Opera < 12.1 */
+@-o-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
 }
