--- a/css/main.css
+++ b/css/main.css
@@ -10,9 +10,6 @@ body {
 body .container {
   width: 100vw;
   height: 100vh;
-  -ms-scroll-snap-type: y mandatory;
-      scroll-snap-type: y mandatory;
-  overflow-y: scroll;
 }
 body .container section {
   position: relative;
@@ -78,174 +75,83 @@ body .container section .titleHeading {
   left: 2%;
 }
 
-i {
-  margin-right: 10px;
-}
-
-/*----------bootstrap-navbar-css------------*/
-.navbar-logo {
-  padding: 15px;
-  color: #fff;
-}
-
-.navbar-mainbg {
-  background-color: rgb(53, 134, 255);
-  padding: 0px;
-  position: fixed;
-  z-index: 1000;
-  width: 100vw;
-}
-
-#navbarSupportedContent {
-  overflow: hidden;
-  position: relative;
-}
-
-#navbarSupportedContent ul {
-  padding: 0px;
-  margin: 0px;
-}
-
-#navbarSupportedContent ul li a i {
-  margin-right: 10px;
-}
-
-#navbarSupportedContent li {
-  list-style-type: none;
-  float: left;
-}
-
-#navbarSupportedContent ul li a {
-  color: #FFFFFF;
+a {
   text-decoration: none;
-  font-size: 15px;
-  display: block;
-  padding: 20px 20px;
-  transition-duration: 0.6s;
-  transition-timing-function: cubic-bezier(0.68, -0.55, 0.265, 1.55);
+}
+
+.et-hero-tabs, .et-slide {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
   position: relative;
+  text-align: center;
+  padding: 0 2em;
+}
+.et-hero-tabs h1, .et-slide h1 {
+  font-size: 2rem;
+  margin: 0;
+  letter-spacing: 1rem;
+}
+.et-hero-tabs h3, .et-slide h3 {
+  font-size: 1rem;
+  letter-spacing: 0.3rem;
+  opacity: 0.6;
 }
 
-#navbarSupportedContent > ul > li.active > a {
-  color: rgb(53, 134, 255);
-  background-color: transparent;
-  transition: all 0.7s;
-}
-
-#navbarSupportedContent a:not(:only-child):after {
-  content: "\f105";
+.et-hero-tabs-container {
+  display: flex;
+  flex-direction: row;
   position: absolute;
-  right: 20px;
-  top: 10px;
-  font-size: 14px;
-  font-family: "Font Awesome 5 Free";
-  display: inline-block;
-  padding-right: 3px;
-  vertical-align: middle;
-  font-weight: 900;
-  transition: 0.5s;
-}
-
-#navbarSupportedContent .active > a:not(:only-child):after {
-  transform: rotate(90deg);
-}
-
-.hori-selector {
-  display: inline-block;
-  position: absolute;
-  height: 100%;
-  top: 0px;
-  left: 0px;
-  transition-duration: 0.6s;
-  transition-timing-function: cubic-bezier(0.68, -0.55, 0.265, 1.55);
-  background-color: #fff;
-  border-top-left-radius: 15px;
-  border-top-right-radius: 15px;
-  margin-top: 10px;
-}
-
-.hori-selector .right,
-.hori-selector .left {
-  position: absolute;
-  width: 25px;
-  height: 25px;
-  background-color: #fff;
-  bottom: 10px;
-}
-
-.hori-selector .right {
-  right: -25px;
-}
-
-.hori-selector .left {
-  left: -25px;
-}
-
-.hori-selector .right:before,
-.hori-selector .left:before {
-  content: "";
-  position: absolute;
-  width: 50px;
-  height: 50px;
-  border-radius: 50%;
-  background-color: rgb(53, 134, 255);
-}
-
-.hori-selector .right:before {
   bottom: 0;
-  right: -25px;
+  width: 100%;
+  height: 70px;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+  background: #fff;
+  z-index: 10;
+}
+.et-hero-tabs-container--top {
+  position: fixed;
+  top: 0;
 }
 
-.hori-selector .left:before {
+.et-hero-tab {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex: 1;
+  color: #000;
+  letter-spacing: 0.1rem;
+  transition: all 0.5s ease;
+  font-size: 0.8rem;
+}
+.et-hero-tab:hover {
+  color: white;
+  background: rgba(102, 177, 241, 0.8);
+  transition: all 0.5s ease;
+}
+
+.et-hero-tab-slider {
+  position: absolute;
   bottom: 0;
-  left: -25px;
+  width: 0;
+  height: 6px;
+  background: #66B1F1;
+  transition: left 0.3s ease;
 }
 
-@media (min-width: 992px) {
-  .navbar-expand-custom {
-    flex-flow: row nowrap;
-    justify-content: flex-start;
+@media (min-width: 800px) {
+  .et-hero-tabs h1,
+.et-slide h1 {
+    font-size: 3rem;
   }
-  .navbar-expand-custom .navbar-nav {
-    flex-direction: row;
+  .et-hero-tabs h3,
+.et-slide h3 {
+    font-size: 1rem;
   }
-  .navbar-expand-custom .navbar-toggler {
-    display: none;
-  }
-  .navbar-expand-custom .navbar-collapse {
-    display: flex !important;
-    flex-basis: auto;
-  }
-}
-@media (max-width: 991px) {
-  #navbarSupportedContent ul li a {
-    padding: 12px 30px;
-  }
-  .hori-selector {
-    margin-top: 0px;
-    margin-left: 10px;
-    border-radius: 0;
-    border-top-left-radius: 25px;
-    border-bottom-left-radius: 25px;
-  }
-  .hori-selector .left,
-.hori-selector .right {
-    right: 10px;
-  }
-  .hori-selector .left {
-    top: -25px;
-    left: auto;
-  }
-  .hori-selector .right {
-    bottom: -25px;
-  }
-  .hori-selector .left:before {
-    left: -25px;
-    top: -25px;
-  }
-  .hori-selector .right:before {
-    bottom: -25px;
-    left: -25px;
+  .et-hero-tab {
+    font-size: 1rem;
   }
 }
 #cirleContainer {
