--- a/css/main.scss
+++ b/css/main.scss
@@ -120,7 +120,7 @@ a {
     h1 {
         font-size: 2rem;
         margin: 0;
-        letter-spacing: 1rem;
+        // letter-spacing: 1rem;
     }
     h3 {
         font-size: 1rem;
