--- a/css/main.css
+++ b/css/main.css
@@ -127,7 +127,7 @@ a {
 }
 .et-hero-tab:hover {
   color: white;
-  background: rgba(102, 177, 241, 0.8);
+  background: rgb(53, 134, 255);
   transition: all 0.5s ease;
 }
 
