--- a/css/main.scss
+++ b/css/main.scss
@@ -152,12 +152,12 @@ a {
     flex: 1;
     color: #000;
     letter-spacing: 0.1rem;
+    transition: all 0.5s ease;
+    font-size: 0.8rem;
+	&:hover {
+        color:white;
+        background: rgb(53, 134, 255);
 		transition: all 0.5s ease;
-		font-size: 0.8rem;
-	  &:hover {
-			color:white;
-      background: rgba(102,177,241,0.8);
-			transition: all 0.5s ease;
     }
 }
 
