--- a/css/main.scss
+++ b/css/main.scss
@@ -3,6 +3,15 @@
     padding: 0px;
 }
 
+h1 {
+    font-family: 'Courier New', Courier, monospace;
+    font-size: 5vw;
+}
+
+p, li, a {
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+
 body {
     width: 100vw;
     height: 100vh;
@@ -33,14 +42,15 @@ body {
                         animation: fadein 2s;
             }
 
-            &:nth-of-type(1) {
-                color: rgb(0, 0, 0);
-            }
+
+            // &:nth-of-type(1) {
+            //     color: #434656;
+            // }
             
             // Skills Section
-            &:nth-of-type(2) {
-                // background-color: rgb(53, 134, 255);
-                color: #434656;
+            &:nth-of-type(1) {
+                background-color: #434656;
+                color: #ffffff;
             }
             
             #skillsList {
@@ -73,18 +83,9 @@ body {
 
             
             // Projects Section
-            &:nth-of-type(3) {
-                // background-color: rgb(255, 255, 255);
-                color: #434656;
-            }
-
-            h1 {
-                font-family: 'Courier New', Courier, monospace;
-                font-size: 5vw;
-            }
-
-            p, li {
-                font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+            &:nth-of-type(2) {
+                background-color: #434656;
+                color: #ffffff;
             }
 
             p {
@@ -113,19 +114,17 @@ a {
     align-items: center;
     height: 100vh;
     position: relative;
-    // background: #eee;
     text-align: center;
     padding: 0 2em;
 
     h1 {
         font-size: 2rem;
         margin: 0;
-        // letter-spacing: 1rem;
+        color: #434656;
     }
     h3 {
         font-size: 1rem;
-        letter-spacing: 0.3rem;
-        opacity: 0.6;
+        color: #434656;
     }
 }
 
@@ -157,7 +156,7 @@ a {
 	&:hover {
         color:white;
         background: rgb(53, 134, 255);
-		transition: all 0.5s ease;
+		transition: all 0.1s ease;
     }
 }
 
@@ -166,7 +165,7 @@ a {
     bottom: 0;
     width: 0;
     height: 6px;
-    background: #66B1F1;
+    background: rgb(53, 134, 255);
     transition: left 0.3s ease;
 }
 
@@ -184,6 +183,9 @@ a {
 		font-size: 1rem;
 	}
 }
+
+
+
 
 // Circles Animation
 #cirleContainer {
