fixed centering for mobile.

--- a/css/main.css
+++ b/css/main.css
@@ -60,13 +60,15 @@ body .container section #skillLi {
   padding: 10px 20px;
   margin: 3px 3px;
   flex-basis: 10%;
-  width: 85vw;
+  width: 80vw;
+  height: 3vh;
   border-radius: 10%;
 }
 body .container section #certContainer {
   display: flex;
   justify-content: center;
   height: 50vh;
+  width: 100vw;
   top: 40vh;
   left: 50vw;
   position: relative;
@@ -76,9 +78,6 @@ body .container section #certUl {
   list-style-type: none;
   display: flex;
   justify-content: center;
-  flex-direction: row;
-  align-content: flex-start;
-  flex-wrap: wrap;
 }
 body .container section img {
   height: 50vh;
