--- a/css/main.css
+++ b/css/main.css
@@ -63,6 +63,7 @@ body .container section #skillLi {
   width: 80vw;
   height: 3vh;
   border-radius: 10%;
+  font-size: 1.5vw;
 }
 body .container section #certContainer {
   display: flex;
@@ -113,8 +114,10 @@ body .container section .img__wrap:hover .img__description {
   opacity: 1;
 }
 body .container section:nth-of-type(2) {
+  background-image: linear-gradient(#434656, #1a1b22);
   background-color: #434656;
   color: #ffffff;
+  height: 200vh;
 }
 body .container section p {
   font-size: 2vw;
@@ -122,7 +125,8 @@ body .container section p {
 body .container section .titleHeading {
   position: absolute;
   top: 12%;
-  left: 2%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 a {
