--- a/css/main.scss
+++ b/css/main.scss
@@ -80,6 +80,7 @@ body {
                 height: 3vh;
 
                 border-radius: 10%;
+                font-size: 1.5vw;
             }
             
             // CERTIFICATION LIST
@@ -98,10 +99,6 @@ body {
                 list-style-type: none;
                 display: flex;
                 justify-content: center;
-            
-                // flex-direction: row;
-                // align-content: flex-start;
-                // flex-wrap: wrap;
             }
             
             img {
@@ -147,8 +144,10 @@ body {
 
             // Projects Section
             &:nth-of-type(2) {
+                background-image: linear-gradient(#434656, #1a1b22);
                 background-color: #434656;
                 color: #ffffff;
+                height:200vh;
             }
 
             p {
@@ -158,7 +157,8 @@ body {
             .titleHeading {
                 position:absolute;
                 top:12%;
-                left: 2%;
+                left: 50%;
+                transform: translate(-50%, -50%);
             }
             
         }
