--- a/css/main.css
+++ b/css/main.css
@@ -27,15 +27,13 @@ body .container section {
   height: 100vh;
   scroll-snap-align: start;
 }
-body .container section #intro {
-  position: relative;
-  top: 20%;
-  left: 5%;
-  color: #434656;
-  -webkit-animation: fadein 2s; /* Safari, Chrome and Opera > 12.1 */ /* Firefox < 16 */ /* Internet Explorer */ /* Opera < 12.1 */
-  animation: fadein 2s;
-}
 body .container section:nth-of-type(1) {
+  background-color: #434656;
+  color: #ffffff;
+  height: 100vh;
+}
+body .container section:nth-of-type(2) {
+  background-image: linear-gradient(#434656, #1a1b22);
   background-color: #434656;
   color: #ffffff;
 }
@@ -65,60 +63,6 @@ body .container section #skillLi {
   border-radius: 10%;
   font-size: 1.5vw;
 }
-body .container section #certContainer {
-  display: flex;
-  justify-content: center;
-  height: 50vh;
-  width: 100vw;
-  top: 40vh;
-  left: 50vw;
-  position: relative;
-  transform: translate(-50%, -50%);
-}
-body .container section #certUl {
-  list-style-type: none;
-  display: flex;
-  justify-content: center;
-}
-body .container section img {
-  height: 50vh;
-}
-body .container section .img__wrap {
-  position: relative;
-  height: 100%;
-  width: 100%;
-  text-align: center;
-  color: rgb(0, 0, 0);
-  padding: 10px 20px;
-  margin: 3px 3px;
-  flex-basis: 10%;
-  width: 85vw;
-}
-body .container section .img__description {
-  position: absolute;
-  top: 50%;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  background: rgba(0, 0, 0, 0.72);
-  color: #fff;
-  visibility: hidden;
-  opacity: 0;
-  text-align: center;
-  height: 100px;
-  line-height: 100px;
-  transition: opacity 0.2s, visibility 0.2s;
-}
-body .container section .img__wrap:hover .img__description {
-  visibility: visible;
-  opacity: 1;
-}
-body .container section:nth-of-type(2) {
-  background-image: linear-gradient(#434656, #1a1b22);
-  background-color: #434656;
-  color: #ffffff;
-  height: 200vh;
-}
 body .container section p {
   font-size: 2vw;
 }
@@ -143,10 +87,14 @@ a {
   text-align: center;
   padding: 0 2em;
 }
-.et-hero-tabs h1, .et-slide h1 {
-  font-size: 2rem;
-  margin: 0;
+.et-hero-tabs #intro, .et-slide #intro {
+  position: absolute;
+  top: 20%;
+  left: 5%;
   color: #434656;
+  text-align: left;
+  -webkit-animation: fadein 2s; /* Safari, Chrome and Opera > 12.1 */ /* Firefox < 16 */ /* Internet Explorer */ /* Opera < 12.1 */
+  animation: fadein 2s;
 }
 .et-hero-tabs h3, .et-slide h3 {
   font-size: 1rem;
