--- a/css/main.scss
+++ b/css/main.scss
@@ -27,32 +27,20 @@ body {
             height: 100vh;
             scroll-snap-align: start;
             
-
-            // Intro Section
-            #intro {
-                position:relative;
-                top:20%;
-                left: 5%;
-                color: #434656;
-            
-                -webkit-animation: fadein 2s; /* Safari, Chrome and Opera > 12.1 */
-                   -moz-animation: fadein 2s; /* Firefox < 16 */
-                    -ms-animation: fadein 2s; /* Internet Explorer */
-                     -o-animation: fadein 2s; /* Opera < 12.1 */
-                        animation: fadein 2s;
-            }
-
-
-            // &:nth-of-type(1) {
-            //     color: #434656;
-            // }
-            
-            // Skills Section
+            // Project Section
             &:nth-of-type(1) {
                 background-color: #434656;
                 color: #ffffff;
+                height:100vh;
             }
-            
+            // Skill Section
+            &:nth-of-type(2) {
+                background-image: linear-gradient(#434656, #1a1b22);
+                background-color: #434656;
+                color: #ffffff;
+                
+            }
+
             #skillsList {
                 position: absolute;
                 top: 99%;
@@ -82,73 +70,7 @@ body {
                 border-radius: 10%;
                 font-size: 1.5vw;
             }
-            
-            // CERTIFICATION LIST
-            #certContainer {
-                display: flex;
-                justify-content: center;
-                height: 50vh;
-                width: 100vw;
-                top: 40vh;
-                left: 50vw;
-                position: relative;
-                transform: translate(-50%, -50%);
-            }
 
-            #certUl {
-                list-style-type: none;
-                display: flex;
-                justify-content: center;
-            }
-            
-            img {
-                height: 50vh;
-            }
-            
-            .img__wrap {
-                position: relative;
-                height: 100%;
-                width: 100%;
-
-                text-align: center;
-                color: rgb(0, 0, 0);
-                padding: 10px 20px;
-                margin: 3px 3px;
-                
-                flex-basis: 10%;
-                width: 85vw;
-            }
-
-            .img__description {
-                position: absolute;
-                top: 50%;
-                bottom: 0;
-                left: 0;
-                right: 0;
-                background: rgba(0, 0, 0, 0.72);
-                color: #fff;
-                visibility: hidden;
-                opacity: 0;
-                text-align: center;
-                height: 100px;
-                line-height: 100px;
-                
-                transition: opacity .2s, visibility .2s;
-            }
-              
-            .img__wrap:hover .img__description {
-                visibility: visible;
-                opacity: 1;
-            }
-
-
-            // Projects Section
-            &:nth-of-type(2) {
-                background-image: linear-gradient(#434656, #1a1b22);
-                background-color: #434656;
-                color: #ffffff;
-                height:200vh;
-            }
 
             p {
                 font-size: 2vw;
@@ -180,10 +102,24 @@ a {
     text-align: center;
     padding: 0 2em;
 
-    h1 {
-        font-size: 2rem;
-        margin: 0;
+    // h1 {
+    //     font-size: 2rem;
+    //     margin: 0;
+    //     color: #434656;
+    // }
+    // Intro Section
+    #intro {
+        position: absolute;
+        top:20%;
+        left: 5%;
         color: #434656;
+        text-align: left;
+    
+        -webkit-animation: fadein 2s; /* Safari, Chrome and Opera > 12.1 */
+           -moz-animation: fadein 2s; /* Firefox < 16 */
+            -ms-animation: fadein 2s; /* Internet Explorer */
+             -o-animation: fadein 2s; /* Opera < 12.1 */
+                animation: fadein 2s;
     }
     h3 {
         font-size: 1rem;
