--- a/css/main.css
+++ b/css/main.css
@@ -399,6 +399,9 @@ a {
   height: 100%;
   position: relative;
   z-index: 0;
+  left: 50vw;
+  top: 50vh;
+  transform: translate(-50%, -50%);
 }
 #projectCards h1 {
   padding: 75px 0 30px 0;
