--- a/css/main.scss
+++ b/css/main.scss
@@ -427,6 +427,9 @@ a {
     // background:white;
     position:relative;
     z-index:0;
+    left: 50vw;
+    top: 50vh;
+    transform: translate(-50%, -50%);
     h1 {
       padding:75px 0 30px 0;
       text-align:center;
