--- a/css/main.css
+++ b/css/main.css
@@ -34,7 +34,22 @@ body .container section {
 body .container section:nth-of-type(1) {
   background-color: #434656;
   color: #ffffff;
-  height: 100vh;
+  height: 300vh;
+}
+body .container section #projContainer {
+  position: relative;
+  top: 30vh;
+  left: 50vw;
+  transform: translate(-50%, 0%);
+  height: auto;
+  width: auto;
+  padding: 1vh, 1vh;
+}
+body .container section .projCard {
+  background-color: #000;
+  height: 75vh;
+  width: 80vw;
+  margin: 1vh;
 }
 body .container section:nth-of-type(2) {
   background-image: linear-gradient(#434656, #1a1b22);
@@ -72,7 +87,7 @@ body .container section p {
 }
 body .container section .titleHeading {
   position: absolute;
-  top: 12%;
+  top: 7%;
   left: 50%;
   transform: translate(-50%, -50%);
 }
