--- a/css/main.css
+++ b/css/main.css
@@ -38,18 +38,37 @@ body .container section:nth-of-type(1) {
 }
 body .container section #projContainer {
   position: relative;
-  top: 30vh;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  top: 10vh;
   left: 50vw;
   transform: translate(-50%, 0%);
   height: auto;
   width: auto;
-  padding: 1vh, 1vh;
 }
 body .container section .projCard {
   background-color: #000;
   height: 75vh;
-  width: 80vw;
+  width: 40vw;
   margin: 1vh;
+}
+body .container section .projCard .projText {
+  position: relative;
+  top: 5vh;
+  left: 1vw;
+}
+body .container section .projCard .projText h2 {
+  margin: 2vh;
+  top: 1vh;
+}
+body .container section .projCard .projText p {
+  margin: 2vw;
+  font-size: 100%;
+  width: 90%;
+}
+body .container section .projCard .cardSkills {
+  position: relative;
+  top: 5vh;
 }
 body .container section:nth-of-type(2) {
   background-image: linear-gradient(#434656, #1a1b22);
@@ -412,10 +431,10 @@ a {
 #quickCards {
   min-height: 100%;
   height: 100%;
-  position: relative;
+  position: absolute;
   z-index: 0;
   left: 50vw;
-  top: 50vh;
+  top: 110vh;
   transform: translate(-50%, -50%);
 }
 #quickCards h1 {
@@ -437,9 +456,9 @@ a {
   margin: 10px;
   background: red;
   font-size: 18px;
-  background-color: #efefef;
-  border-radius: 3px;
+  background-color: #5d75f8;
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.3);
+  color: #fff;
   cursor: pointer;
 }
 #quickCards .buttons .button:hover {
