--- a/css/main.scss
+++ b/css/main.scss
@@ -33,7 +33,9 @@ body {
             height: 100vh;
             scroll-snap-align: start;
             
+            ////////////////////////
             // Project Section
+            ////////////////////////
             &:nth-of-type(1) {
                 background-color: #434656;
                 color: #ffffff;
@@ -42,23 +44,50 @@ body {
 
             #projContainer {
               position: relative;
-              top: 30vh;
+              display: grid;
+              grid-template-columns: 1fr 1fr;
+
+              top: 10vh;
               left: 50vw;
               transform: translate(-50%, 0%);
               height: auto;
               width: auto;
               // background-color: #fff;
-              padding: 1vh, 1vh;
+              // padding: 1vh, 1vh;
             }
 
             .projCard {
+              // position: relative;
               background-color: #000;
               height: 75vh;
-              width: 80vw;
+              width: 40vw;
               margin: 1vh;
-            }
 
+              .projText {
+                position: relative;
+                top: 5vh;
+                left: 1vw;  
+                
+                h2 {
+                  margin: 2vh;
+                  top: 1vh;
+                }
+                p {
+                  margin: 2vw;
+                  font-size: 100%;
+                  width: 90%;
+                }
+              }
+
+              .cardSkills {
+                position: relative;
+                top: 5vh;
+              }
+            }
+            
+            ////////////////////////
             // Skill Section
+            ////////////////////////
             &:nth-of-type(2) {
                 background-image: linear-gradient(#434656, #1a1b22);
                 background-color: #434656;
@@ -444,10 +473,10 @@ a {
     min-height:100%;
     height:100%;
     // background:white;
-    position:relative;
+    position:absolute;
     z-index:0;
     left: 50vw;
-    top: 50vh;
+    top: 110vh;
     transform: translate(-50%, -50%);
     h1 {
       padding:75px 0 30px 0;
@@ -467,9 +496,10 @@ a {
         margin:10px;
         background:red;
         font-size:18px;
-        background-color:#efefef;
-        border-radius:3px;
+        background-color:#5d75f8;
+        // border-radius:3px;
         box-shadow:0 1px 2px rgba(0,0,0,.3);
+        color: #fff;
         cursor:pointer;
         &:hover {
           color:white;
