--- a/css/main.css
+++ b/css/main.css
@@ -34,7 +34,7 @@ body .container section {
 body .container section:nth-of-type(1) {
   background-color: #434656;
   color: #ffffff;
-  height: 300vh;
+  height: 100vh;
 }
 body .container section #projContainer {
   position: relative;
@@ -43,30 +43,28 @@ body .container section #projContainer {
   top: 10vh;
   left: 50vw;
   transform: translate(-50%, 0%);
-  height: auto;
-  width: auto;
+  height: 100vh;
+  width: 90vw;
 }
-body .container section .projCard {
+body .container section #projContainer .projCard {
   background-color: #000;
-  height: 75vh;
-  width: 40vw;
-  margin: 1vh;
+  margin: 1vh 1vh;
 }
-body .container section .projCard .projText {
+body .container section #projContainer .projCard .projText {
   position: relative;
   top: 5vh;
   left: 1vw;
 }
-body .container section .projCard .projText h2 {
+body .container section #projContainer .projCard .projText h2 {
   margin: 2vh;
   top: 1vh;
 }
-body .container section .projCard .projText p {
+body .container section #projContainer .projCard .projText p {
   margin: 2vw;
   font-size: 100%;
   width: 90%;
 }
-body .container section .projCard .cardSkills {
+body .container section #projContainer .projCard .cardSkills {
   position: relative;
   top: 5vh;
 }
