--- a/css/main.css
+++ b/css/main.css
@@ -34,26 +34,29 @@ body .container section {
 body .container section:nth-of-type(1) {
   background-color: #434656;
   color: #ffffff;
-  height: 100vh;
+  height: auto;
 }
 body .container section #projContainer {
   position: relative;
-  display: grid;
-  grid-template-columns: 1fr 1fr;
   top: 10vh;
-  left: 50vw;
-  transform: translate(-50%, 0%);
-  height: 100vh;
-  width: 90vw;
+  width: 100vw;
+  height: auto;
+  display: grid;
+  place-items: center;
 }
 body .container section #projContainer .projCard {
+  width: 60vw;
+  height: auto;
+  min-height: 60vh;
   background-color: #000;
   margin: 1vh 1vh;
+  display: grid;
+  grid-template-columns: 0, 0;
 }
 body .container section #projContainer .projCard .projText {
-  position: relative;
   top: 5vh;
   left: 1vw;
+  width: auto;
 }
 body .container section #projContainer .projCard .projText h2 {
   margin: 2vh;
@@ -66,12 +69,26 @@ body .container section #projContainer .projCard .projText p {
 }
 body .container section #projContainer .projCard .cardSkills {
   position: relative;
-  top: 5vh;
+  margin: 2vw;
+  width: auto;
+}
+body .container section #projContainer .projCard:nth-child(odd) {
+  background-color: rgb(78, 78, 78);
 }
 body .container section:nth-of-type(2) {
   background-image: linear-gradient(#434656, #1a1b22);
   background-color: #434656;
   color: #ffffff;
+}
+body .container section #badgeContainer {
+  width: 100vw;
+  height: 100vh;
+  display: grid;
+  place-items: center;
+}
+body .container section #badgeContainer .badgeImg {
+  height: 50vh;
+  width: auto;
 }
 body .container section #skillsList {
   position: absolute;
@@ -203,7 +220,7 @@ a {
   width: 100vw;
   height: 100vh;
   overflow: hidden;
-  z-index: -1;
+  z-index: 0;
 }
 
 .circles li {
@@ -430,7 +447,7 @@ a {
   min-height: 100%;
   height: 100%;
   position: absolute;
-  z-index: 0;
+  z-index: 1;
   left: 50vw;
   top: 110vh;
   transform: translate(-50%, -50%);
