--- a/css/main.scss
+++ b/css/main.scss
@@ -13,6 +13,7 @@ p, li, a {
 }
 
 html, body {
+    //background-color: #868686;
     &.modal-active {
         overflow: hidden;
     }
@@ -39,31 +40,44 @@ body {
             &:nth-of-type(1) {
                 background-color: #434656;
                 color: #ffffff;
-                height:100vh;
+                height: auto;
             }
 
-            #projContainer {
+             #projContainer {
               position: relative;
-              display: grid;
-              grid-template-columns: 1fr 1fr;
-
               top: 10vh;
-              left: 50vw;
-              transform: translate(-50%, 0%);
-              height: 100vh;
-              width: 90vw;
+              width: 100vw;
+              height: auto;
+
+              display: grid;
+              place-items: center;
+
+            //   position: relative;
+            //   display: grid;
+            //   grid-template-columns: 1fr 1fr;
+
+            //   top: 10vh;
+            //   left: 50vw;
+            //   transform: translate(-50%, 0%);
+            //   height: 100vh;
+            //   width: 90vw;
               
               
               .projCard {
-                // position: relative;
+                width: 60vw;
+                height: auto;
+                min-height: 60vh;
                 background-color: #000;
                 margin: 1vh 1vh;
+                display: grid;
+                grid-template-columns: 0, 0; //0.5fr 0.5fr;
                 
                 .projText {
-                  position: relative;
                   top: 5vh;
-                  left: 1vw;  
-                  
+                  left: 1vw;
+                  width: auto;
+                  // height: 100vh;
+
                   h2 {
                     margin: 2vh;
                     top: 1vh;
@@ -77,9 +91,15 @@ body {
 
                 .cardSkills {
                   position: relative;
-                  top: 5vh;
+                  margin: 2vw;
+                  width: auto;
                 }
               }
+
+              .projCard:nth-child(odd) {
+                background-color:rgb(78, 78, 78);
+              }
+
             }
             ////////////////////////
             // Skill Section
@@ -89,6 +109,19 @@ body {
                 background-color: #434656;
                 color: #ffffff;
                 
+            }
+
+            #badgeContainer {
+
+              width: 100vw;
+              height: 100vh;
+              display: grid;
+              place-items: center;
+
+              .badgeImg {
+                height: 50vh;
+                width: auto;
+              }
             }
 
             #skillsList {
@@ -249,7 +282,7 @@ a {
     width: 100vw;
     height: 100vh;
     overflow: hidden;
-    z-index: -1;
+    z-index: 0;
 }
 
 .circles li{
@@ -470,7 +503,7 @@ a {
     height:100%;
     // background:white;
     position:absolute;
-    z-index:0;
+    z-index:1;
     left: 50vw;
     top: 110vh;
     transform: translate(-50%, -50%);
