--- a/css/main.css
+++ b/css/main.css
@@ -35,6 +35,7 @@ body .container section:nth-of-type(1) {
   background-color: #434656;
   color: #ffffff;
   height: auto;
+  min-height: 100vh;
 }
 body .container section #projContainer {
   position: relative;
@@ -79,42 +80,57 @@ body .container section:nth-of-type(2) {
   background-image: linear-gradient(#434656, #1a1b22);
   background-color: #434656;
   color: #ffffff;
+  height: 100vh;
+  display: flex;
 }
 body .container section #badgeLabel {
   position: relative;
   top: 5vh;
-  text-align: center;
+  text-align: left;
+  background-color: rgb(53, 134, 255);
+  color: #fff;
+  padding-left: 5vw;
+  padding-top: 1vh;
 }
 body .container section #badgeContainer {
   position: relative;
   top: 7vh;
-  width: 100vw;
-  height: auto;
+  width: 90vw;
+  height: 60vh;
   display: grid;
-  place-items: center;
+  transform: translate(5vw, 0);
+  grid-template-columns: 25vw 25vw;
+  grid-template-rows: 70vh;
+  grid-auto-flow: column;
+  justify-content: space-evenly;
+  justify-items: center;
+  align-items: center;
+  align-content: space-evenly;
 }
 body .container section #badgeContainer .badgeImg {
   aspect-ratio: 1/1;
   max-width: 50vw;
   max-height: 50vh;
+  mix-blend-mode: color-burn;
 }
-body .container section #skills {
-  position: relative;
-  top: 10vh;
-  width: 50vw;
-  height: 50vh;
+body .container section #skillList {
+  top: 100vh;
+  height: 20vh;
+  transform: translate(-90vw, 0);
+  align-self: flex-end;
 }
-body .container section #skills ul {
-  list-style-type: none;
+body .container section #skillList ul {
+  width: 100vw;
   text-align: center;
 }
-body .container section #skills ul li {
+body .container section #skillList ul li {
+  display: inline-block;
+  margin-top: 10px;
+  margin: 10px, 0;
   background-color: #fff;
   color: black;
-  display: inline-block;
-  vertical-align: top;
-  height: auto;
   width: 100px;
+  border-radius: 1em;
 }
 body .container section p {
   font-size: 2vw;
@@ -146,8 +162,7 @@ a {
   left: 5%;
   color: #434656;
   text-align: left;
-  z-index: 1;
-  -webkit-animation: fadein 2s; /* Safari, Chrome and Opera > 12.1 */ /* Firefox < 16 */ /* Internet Explorer */ /* Opera < 12.1 */
+  z-index: 1; /* Safari, Chrome and Opera > 12.1 */ /* Firefox < 16 */ /* Internet Explorer */ /* Opera < 12.1 */
   animation: fadein 2s;
 }
 .et-hero-tabs h3, .et-slide h3 {
@@ -198,11 +213,11 @@ a {
 
 @media (min-width: 800px) {
   .et-hero-tabs h1,
-.et-slide h1 {
+  .et-slide h1 {
     font-size: 3rem;
   }
   .et-hero-tabs h3,
-.et-slide h3 {
+  .et-slide h3 {
     font-size: 1rem;
   }
   .et-hero-tab {
@@ -231,8 +246,7 @@ a {
   width: 20px;
   height: 20px;
   background: rgb(53, 134, 255);
-  -webkit-animation: animate 25s linear infinite;
-          animation: animate 25s linear infinite;
+  animation: animate 25s linear infinite;
   bottom: -150px;
 }
 
@@ -240,106 +254,75 @@ a {
   left: 25%;
   width: 80px;
   height: 80px;
-  -webkit-animation-delay: 0s;
-          animation-delay: 0s;
+  animation-delay: 0s;
 }
 
 .circles li:nth-child(2) {
   left: 10%;
   width: 20px;
   height: 20px;
-  -webkit-animation-delay: 2s;
-          animation-delay: 2s;
-  -webkit-animation-duration: 12s;
-          animation-duration: 12s;
+  animation-delay: 2s;
+  animation-duration: 12s;
 }
 
 .circles li:nth-child(3) {
   left: 70%;
   width: 20px;
   height: 20px;
-  -webkit-animation-delay: 4s;
-          animation-delay: 4s;
+  animation-delay: 4s;
 }
 
 .circles li:nth-child(4) {
   left: 40%;
   width: 60px;
   height: 60px;
-  -webkit-animation-delay: 0s;
-          animation-delay: 0s;
-  -webkit-animation-duration: 18s;
-          animation-duration: 18s;
+  animation-delay: 0s;
+  animation-duration: 18s;
 }
 
 .circles li:nth-child(5) {
   left: 65%;
   width: 20px;
   height: 20px;
-  -webkit-animation-delay: 0s;
-          animation-delay: 0s;
+  animation-delay: 0s;
 }
 
 .circles li:nth-child(6) {
   left: 75%;
   width: 110px;
   height: 110px;
-  -webkit-animation-delay: 3s;
-          animation-delay: 3s;
+  animation-delay: 3s;
 }
 
 .circles li:nth-child(7) {
   left: 35%;
   width: 150px;
   height: 150px;
-  -webkit-animation-delay: 7s;
-          animation-delay: 7s;
+  animation-delay: 7s;
 }
 
 .circles li:nth-child(8) {
   left: 50%;
   width: 25px;
   height: 25px;
-  -webkit-animation-delay: 15s;
-          animation-delay: 15s;
-  -webkit-animation-duration: 45s;
-          animation-duration: 45s;
+  animation-delay: 15s;
+  animation-duration: 45s;
 }
 
 .circles li:nth-child(9) {
   left: 20%;
   width: 15px;
   height: 15px;
-  -webkit-animation-delay: 2s;
-          animation-delay: 2s;
-  -webkit-animation-duration: 35s;
-          animation-duration: 35s;
+  animation-delay: 2s;
+  animation-duration: 35s;
 }
 
 .circles li:nth-child(10) {
   left: 85%;
   width: 150px;
   height: 150px;
-  -webkit-animation-delay: 0s;
-          animation-delay: 0s;
-  -webkit-animation-duration: 11s;
-          animation-duration: 11s;
-}
-
-@-webkit-keyframes animate {
-  0% {
-    transform: translateY(0) rotate(0deg);
-    opacity: 1;
-    border-radius: 10%;
-  }
-  20% {
-    opacity: 1;
-  }
-  100% {
-    transform: translateY(-150vh) rotate(500deg);
-    opacity: 0;
-    border-radius: 50%;
-  }
+  animation-delay: 0s;
+  animation-duration: 11s;
 }
 
 @keyframes animate {
@@ -367,14 +350,6 @@ a {
 }
 /* Firefox < 16 */
 /* Safari, Chrome and Opera > 12.1 */
-@-webkit-keyframes fadein {
-  from {
-    opacity: 0;
-  }
-  to {
-    opacity: 1;
-  }
-}
 /* Internet Explorer */
 /* Opera < 12.1 */
 #modal-container {
@@ -389,22 +364,18 @@ a {
 }
 #modal-container.one {
   transform: scaleY(0.01) scaleX(0);
-  -webkit-animation: unfoldIn 1s cubic-bezier(0.165, 0.84, 0.44, 1) forwards;
-          animation: unfoldIn 1s cubic-bezier(0.165, 0.84, 0.44, 1) forwards;
+  animation: unfoldIn 1s cubic-bezier(0.165, 0.84, 0.44, 1) forwards;
 }
 #modal-container.one .modal-background .modal {
   transform: scale(0);
-  -webkit-animation: zoomIn 0.5s 0.8s cubic-bezier(0.165, 0.84, 0.44, 1) forwards;
-          animation: zoomIn 0.5s 0.8s cubic-bezier(0.165, 0.84, 0.44, 1) forwards;
+  animation: zoomIn 0.5s 0.8s cubic-bezier(0.165, 0.84, 0.44, 1) forwards;
 }
 #modal-container.one.out {
   transform: scale(1);
-  -webkit-animation: unfoldOut 1s 0.3s cubic-bezier(0.165, 0.84, 0.44, 1) forwards;
-          animation: unfoldOut 1s 0.3s cubic-bezier(0.165, 0.84, 0.44, 1) forwards;
+  animation: unfoldOut 1s 0.3s cubic-bezier(0.165, 0.84, 0.44, 1) forwards;
 }
 #modal-container.one.out .modal-background .modal {
-  -webkit-animation: zoomOut 0.5s cubic-bezier(0.165, 0.84, 0.44, 1) forwards;
-          animation: zoomOut 0.5s cubic-bezier(0.165, 0.84, 0.44, 1) forwards;
+  animation: zoomOut 0.5s cubic-bezier(0.165, 0.84, 0.44, 1) forwards;
 }
 #modal-container .modal-background {
   display: table-cell;
@@ -479,18 +450,6 @@ a {
   background: #009bd5;
 }
 
-@-webkit-keyframes unfoldIn {
-  0% {
-    transform: scaleY(0.005) scaleX(0);
-  }
-  50% {
-    transform: scaleY(0.005) scaleX(1);
-  }
-  100% {
-    transform: scaleY(1) scaleX(1);
-  }
-}
-
 @keyframes unfoldIn {
   0% {
     transform: scaleY(0.005) scaleX(0);
@@ -500,17 +459,6 @@ a {
   }
   100% {
     transform: scaleY(1) scaleX(1);
-  }
-}
-@-webkit-keyframes unfoldOut {
-  0% {
-    transform: scaleY(1) scaleX(1);
-  }
-  50% {
-    transform: scaleY(0.005) scaleX(1);
-  }
-  100% {
-    transform: scaleY(0.005) scaleX(0);
   }
 }
 @keyframes unfoldOut {
@@ -524,28 +472,12 @@ a {
     transform: scaleY(0.005) scaleX(0);
   }
 }
-@-webkit-keyframes zoomIn {
-  0% {
-    transform: scale(0);
-  }
-  100% {
-    transform: scale(1);
-  }
-}
 @keyframes zoomIn {
   0% {
     transform: scale(0);
   }
   100% {
     transform: scale(1);
-  }
-}
-@-webkit-keyframes zoomOut {
-  0% {
-    transform: scale(1);
-  }
-  100% {
-    transform: scale(0);
   }
 }
 @keyframes zoomOut {
