updated certifications title

--- a/css/main.css
+++ b/css/main.css
@@ -87,7 +87,7 @@ body .container section #badgeLabel {
   position: relative;
   top: 5vh;
   text-align: left;
-  background-color: rgb(53, 134, 255);
+  background-color: rgba(53, 134, 255, 0.507);
   color: #fff;
   padding-left: 5vw;
   padding-top: 1vh;
