--- a/css/main.scss
+++ b/css/main.scss
@@ -110,7 +110,7 @@ body {
               top: 5vh;
               //left: 5vw;
               text-align: left;
-              background-color: rgb(53, 134, 255);;
+              background-color: rgba(53, 134, 255, 0.507);
               color: #fff;
               padding-left: 5vw;
               padding-top: 1vh;
